# coreproject-seeder

./: main.py  package-lock.json  package.json  pyproject.toml
