[tool.poetry]
name = "pywebview-sveltekit"
version = "0.1.0"
description = ""
authors = ["tokitouq <suneeth.since2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pywebview = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
